--- a/sass/_specific-html-support.scss
+++ b/sass/_specific-html-support.scss
@@ -27,7 +27,7 @@ a abbr {
 /* computer science */
 
 pre, code, tt, samp, kbd {
-  font: normal normal 1em/1.5em #{$monospSerif};
+  font: normal normal 1em/1.5em #{$baseFontFamilyMono};
 }
 
 pre {
