--- a/css/style.css
+++ b/css/style.css
@@ -4,15 +4,15 @@
     Weiss 2012
 
 ============================================================================= */
-html, body, div, h1, h2, h3, h4, h5, h6, p, img,
-dl, dt, dd, ol, ul, li, caption,
-table, tbody, tfoot, thead, tr, th, td,
-form, fieldset, embed, object, applet {
-  margin: 0;
-  padding: 0;
-  border: 0;
-}
-
+/* 
+ * TODO
+ * compass вертикальный ритм
+ * 
+ * сетка и layout на сетке
+ * 
+ * 
+ * em удалить
+ *  */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, nav, section {
   display: block;
@@ -32,6 +32,18 @@ blockquote:before, blockquote:after, q:before, q:after {
 /* ============================================================================
     1. BASIC
 ============================================================================= */
+/*
+@font-face {
+  font-family: 'Example';
+  src: url('../fonts/example.eot');
+  src: url('../fonts/example.eot?iefix') format('eot'),
+    url('../fonts/example.woff') format('woff'),
+    url('../fonts/example.ttf') format('truetype'),
+    url('../fonts/example.svg#webfontOkOndcij') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+*/
 /* ============================================================================
     1.1. Typography
 ============================================================================= */
@@ -40,7 +52,7 @@ h1, h2, .h1, .h2, h3, h4, h5, h6, .h3, .h4, .h5, .h6 {
   font-weight: normal;
 }
 
-h1, .h1, .aside h2, .aside .h2 {
+h1, .h1 {
   font-size: 2.14em;
   margin: 0 0 1em;
 }
@@ -110,21 +122,9 @@ a:hover, a:active {
 img {
   font-size: 1em;
   color: #444;
-  -ms-interpolation-mode: bicubic;
   position: relative;
-}
-a img, a:visited img {
-  border: 0 none;
-}
-#main p img {
-  float: left;
-  padding: 0 1em 0 0;
-}
-img::-moz-selection {
-  background: transparent;
-}
-img::selection {
-  background: transparent;
+  border: none;
+  -ms-interpolation-mode: bicubic;
 }
 
 object,
@@ -216,8 +216,8 @@ tbody tr:nth-of-type(odd) td {
 
 tfoot {
   text-align: center;
-  font-style: italic;
   font-size: .9em;
+  font-style: italic;
 }
 
 /* ============================================================================
@@ -336,14 +336,11 @@ button::-moz-focus-inner, input::-moz-focus-inner {
   padding: 0;
 }
 
-.ie-old button, .ie-old input, .ie-old select, .ie-old textarea {
+.ie6-7 button, .ie6-7 input, .ie6-7 select, .ie6-7 textarea {
   vertical-align: middle;
 }
-.ie-old button, .ie-old input {
+.ie6-7 button, .ie6-7 input {
   overflow: visible;
-}
-.ie-old legend {
-  margin-left: -7px;
 }
 
 /* ============================================================================
@@ -395,22 +392,18 @@ figure {
     1.5. Page Layout
 ============================================================================= */
 body {
-  font: 14px/1.3 Arial, FreeSans, sans-serif;
+  font: 16px/24px Arial, FreeSans, sans-serif;
   color: #434343;
   background: white;
   overflow-y: scroll;
-  cursor: default;
+  margin: 0;
 }
-.ie-old body {
+.ie6-7 body {
   overflow-y: auto;
 }
 
 /* header
    --------------------------------------------------------------------------*/
-#header {
-  width: 100%;
-}
-
 /* main
    --------------------------------------------------------------------------*/
 #main-container {
@@ -429,21 +422,21 @@ body {
   width: 100%;
 }
 
-body.two-sidebars #main {
+.two-sidebars-main {
   float: left;
   margin-left: 25.806%;
   width: 48.665%;
 }
-.ie-old body.two-sidebars #main {
+.ie6-7 .two-sidebars-main {
   display: inline;
 }
 
-body.sidebar-first #main {
+.sidebar-first-main {
   float: right;
   width: 74.333%;
 }
 
-body.sidebar-second #main {
+.sidebar-second-main {
   float: left;
   margin: 0;
   padding: 0;
@@ -452,23 +445,24 @@ body.sidebar-second #main {
 
 /* sidebars
    --------------------------------------------------------------------------*/
-body.two-sidebars #sidebar-first {
+.two-sidebars-sidebar-first {
   float: left;
   margin-left: -74.333%;
   width: 23.306%;
 }
 
-body.two-sidebars #sidebar-second {
+.two-sidebars-sidebar-second {
   float: right;
   width: 23.306%;
 }
 
-body.sidebar-first .aside, body.sidebar-second .aside {
+.sidebar-first-aside,
+.sidebar-second-aside {
   float: left;
   width: 23.306%;
 }
 
-body.sidebar-second .aside {
+.sidebar-second-aside {
   float: right;
 }
 
@@ -518,7 +512,7 @@ body.sidebar-second .aside {
   font-size: 0;
   visibility: hidden;
 }
-.ie-old .clearfix {
+.ie6-7 .clearfix {
   zoom: 1;
 }
 
@@ -576,7 +570,7 @@ span.br {
   display: inline-block;
   vertical-align: top;
 }
-.ie-old .dib, .ie-old .img-container {
+.ie6-7 .dib, .ie6-7 .img-container {
   display: inline;
   zoom: 1;
 }
@@ -595,6 +589,44 @@ span.br {
 .img-container img {
   display: block;
   position: static;
+}
+
+/* ============================================================================
+    Sprite support
+============================================================================= */
+span.ico {
+  /* background: url("../images/main-sprite.png") 0 0 no-repeat; */
+  display: inline-block;
+  position: relative;
+}
+.ie6-7 span.ico {
+  display: inline;
+  zoom: 1;
+}
+
+#plusone table, #plusone td, #plusone th, #plusone tr,
+.YMaps-b-balloon-frame table,
+.YMaps-b-balloon-frame td,
+.YMaps-b-balloon-frame th,
+.YMaps-b-balloon-frame tr,
+#vkshare0 table,
+#vkshare0 td,
+#vkshare0 th,
+#vkshare0 tr,
+.bitrix table,
+.bitrix td,
+.bitrix th,
+.bitrix tr {
+  margin: 0;
+  padding: 0;
+  border: none;
+}
+
+.bitrix input, .bitrix select, .bitrix textarea {
+  border: initial;
+  margin: initial;
+  padding: initial;
+  background: initial;
 }
 
 /* ============================================================================
@@ -1114,54 +1146,6 @@ ins {
 .grid-row > :first-child,
 .grid-row .grid-row > :first-child {
   margin-left: 0;
-}
-
-/* ============================================================================
-    Sprite support
-============================================================================= */
-span.ico {
-  /* background: url("../images/main-sprite.png") 0 0 no-repeat; */
-  display: inline-block;
-  position: relative;
-}
-.ie-old span.ico {
-  display: inline;
-  zoom: 1;
-}
-
-/* ============================================================================
-    Additional
-============================================================================= */
-.hidden {
-  display: none !important;
-  visibility: hidden;
-}
-
-.visuallyhidden {
-  border: 0;
-  clip: rect(1px, 1px, 1px, 1px);
-  height: 1px;
-  margin: -1px;
-  overflow: hidden;
-  padding: 0;
-  position: absolute !important;
-  width: 1px;
-}
-.ie-old .visuallyhidden {
-  clip: rect(1px 1px 1px 1px);
-}
-
-.visuallyhidden.focusable:ficus, .visuallyhidden.focusable:active {
-  clip: auto;
-  height: auto;
-  margin: 0;
-  overflow: visible;
-  position: static;
-  width: auto;
-}
-
-.invisible {
-  visibility: hidden;
 }
 
 /*
